Adjust padding for mobile view to prevent header overlapping home-content

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     list-style: none;
 }
 .header {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
